<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rechnerMain"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yourStitches"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutGen"
            android:orientation="horizontal"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/stitches"
                    android:textSize="16sp"
                    android:id="@+id/yourWidth" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:id="@+id/yourWidthEdit"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_margin="5dp"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/rows"
                    android:textSize="16sp"
                    android:id="@+id/yourHeight"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:id="@+id/yourHeightEdit"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:inputType="number"/>

            </LinearLayout>

        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theirStitches"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutGen"
            android:orientation="horizontal"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/stitches"
                    android:textSize="16sp"
                    android:id="@+id/theirWidth"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:id="@+id/theirWidthEdit"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/rows"
                    android:textSize="16sp"
                    android:id="@+id/theirHeight"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:id="@+id/theirHeightEdit"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:inputType="number"/>

            </LinearLayout>

        </GridLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wantedStitches"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/layoutGen"
        android:orientation="horizontal"
        android:columnCount="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/stitches"
                android:textSize="16sp"
                android:id="@+id/wantedWidth"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:id="@+id/wantedWidthEdit"
                android:textAlignment="center"
                android:layout_weight="1"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:text="@string/rows"
                android:textSize="16sp"
                android:id="@+id/wantedHeight"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:id="@+id/wantedHeightEdit"
                android:textAlignment="center"
                android:layout_weight="1"
                android:inputType="number"x/>

        </LinearLayout>

    </GridLayout>

    <Button
        android:layout_width="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:id="@+id/calculate"
        android:text="@string/calculate"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/result"
            android:textStyle="bold"
            android:textAlignment="center" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/layoutGen"
            android:orientation="horizontal"
            android:columnCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/stitches"
                    android:textSize="16sp"
                    android:id="@+id/resultWidth"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:id="@+id/resultWidthText"
                    android:textAlignment="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    android:text="@string/rows"
                    android:textSize="16sp"
                    android:id="@+id/resultHeight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:id="@+id/resultHeightText"
                    android:layout_weight="1"/>

            </LinearLayout>

        </GridLayout>

    </LinearLayout>

</LinearLayout>